# Robot_Arm_Kinematics_Lib

./: .gitignore  .gitmodules  .travis.yml  CLAUDE.md  CMakeLists.txt  README.md  _formulas.tex  annotated.html  artic_8cpp.html  artic_8cpp__incl.map  artic_8cpp__incl.md5  artic_8h.html  artic_8h__dep__incl.map  artic_8h__dep__incl.md5  artic_8h__incl.map  artic_8h__incl.md5  artic_8h_source.html  classes.html  classrb_1_1kin_1_1_artic-members.html  classrb_1_1kin_1_1_artic.html  classrb_1_1kin_1_1_artic__coll__graph.map  classrb_1_1kin_1_1_artic__inherit__graph.md5  classrb_1_1kin_1_1_artic_a05902147b228d4db1b8063a91ebbc8f2_icgraph.map  classrb_1_1kin_1_1_artic_a05902147b228d4db1b8063a91ebbc8f2_icgraph.md5  classrb_1_1kin_1_1_artic_a0b7e6e8bdede5be9729cab46f3666c77_cgraph.map  classrb_1_1kin_1_1_artic_a0b7e6e8bdede5be9729cab46f3666c77_cgraph.md5  classrb_1_1kin_1_1_artic_a0cb6db0a3c56a35e7d963ca1d98b0d30_cgraph.map  classrb_1_1kin_1_1_artic_a660711a440ae6cdd8ab8e630195610f9_icgraph.map  classrb_1_1kin_1_1_artic_a660711a440ae6cdd8ab8e630195610f9_icgraph.md5  classrb_1_1kin_1_1_artic_a77df74816a9851238f804996d048c822_cgraph.map  classrb_1_1kin_1_1_artic_a7c83c972ca6078e696fc7b9d64428965_cgraph.map  classrb_1_1kin_1_1_artic_a7c83c972ca6078e696fc7b9d64428965_cgraph.md5  classrb_1_1kin_1_1_artic_a7c83c972ca6078e696fc7b9d64428965_icgraph.map  classrb_1_1kin_1_1_artic_a7c83c972ca6078e696fc7b9d64428965_icgraph.md5  classrb_1_1kin_1_1_artic_a8386df41636cd232ecd245232744eae6_cgraph.md5  classrb_1_1kin_1_1_artic_a928b4be72cd0d56704c6211990a82797_cgraph.map  classrb_1_1kin_1_1_artic_a928b4be72cd0d56704c6211990a82797_cgraph.md5  classrb_1_1kin_1_1_artic_a928b4be72cd0d56704c6211990a82797_icgraph.map  classrb_1_1kin_1_1_artic_a928b4be72cd0d56704c6211990a82797_icgraph.md5  classrb_1_1kin_1_1_artic_acf56aa659b6d57a94f8e021343b856d3_cgraph.md5  (+97 more)
.github/workflows/: doxygen-pages.yml
demos/: README.md
demos/kinDemo_Im/: Makefile  Makefile.emscripten  application.cpp  application.h  main.cpp
demos/kinDemo_Im/Ini/: imgui_base.ini
demos/kinDemo_qt/: kinDemo_qt.pro  kindemo.cpp  kindemo.h  kindemo.ui  main.cpp
docs/: Doxyfile  mainpage.md
examples/: basic_fk_ik.cpp
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+29 more)
src/: artic.cpp  artic.h  rakl.cpp  rakl.h
src/kin/: artic.cpp  artic.h  kinematic_chain.cpp  kinematic_chain.h  link.cpp  link.h
src/math/: matrix.h  polynomial.h  unit.h
test/: CMakeLists.txt  CMakeLists.txt.in  kinematics_test.cpp  link_test.cpp  main.cpp  polynomial_test.cpp  test_run.cpp
